[project]
name = "langgraph-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.31.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "streamlit>=1.48.0",
]
